# sersyscap

./: Cargo.toml  README.md  build.rs
schema/: syslog.capnp
src/: lib.rs
