[package]
name = "sersyscap"
version = "1.0.0"
edition = "2024"
authors = ["hunter matuse"]
description = "A library for serializing and deserializing syslog messages using Cap'n Proto"
repository = "https://github.com/huntermatuse/sersyscap"
readme = "README.md"
keywords = ["syslog", "serialization", "capnproto", "logging"]
categories = ["encoding", "network-programming"]

[dependencies]
anyhow = "1.0.98"
capnp = "0.21.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
capnpc = "0.21.0"
